--- a/ts/package.json
+++ b/ts/package.json
@@ -19,5 +19,9 @@
         "ts-jest": "^28.0.1",
         "ts-node": "^10.7.0",
         "typescript": "^4.6.4"
+    },
+    "dependencies": {
+        "fp-ts": "^2.12.1",
+        "monocle-ts": "^2.3.13"
     }
 }
